--- a/views/admin/editcategorias.handlebars
+++ b/views/admin/editcategorias.handlebars
@@ -4,12 +4,11 @@
 
 {{/each}}
 
-<h3>Edit categoria: </h3>
+<h3>Nova categoria: </h3>
 
 <div class="card">
   <div class="card-body">
     <form action="/admin/categorias/edit" method="post">
-      <input type="hidden" name="id" id="id" value="{{categoria._id}}" />
       <label for="nome">Nome: </label>
       <input
         type="text"
@@ -17,7 +16,6 @@
         name="nome"
         placeholder="Nome da categoria"
         class="form-control"
-        value="{{categoria.nome}}"
       />
       <label for="slug">Slug</label>
       <input
@@ -26,7 +24,6 @@
         id="slug"
         placeholder="Slug da categoria"
         class="form-control"
-        value="{{categoria.slug}}"
       />
       <br />
       <button type="submit" class="btn btn-success">Editar categoria</button>
