--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <a
       class="navbar-brand"
-      href="/admin/categorias
+      href="/
     "
     >Blog JS</a>
     <button
@@ -19,13 +19,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="/categorias">Categorias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link disabled" aria-disabled="true">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Registro</a>
         </li>
       </ul>
 
