--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,8 @@
     MongoDB</p>
   <hr class="my-4" />
   <p>Aqui você vai poder ler sobre as novidades do mundo da computação</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Crie uma conta</a>
+  <a class="btn btn-primary btn-lg" href="/usuarios/registro" role="button">Crie
+    uma conta</a>
 </div>
 
 <hr />
